# Paritwine

./: AUTHORS  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.md  configure  configure.ac
config/: ltmain.sh
doc/: Makefile.am  Makefile.in  paritwine.info  paritwine.texi  version.texi
gp/: Makefile.am  Makefile.in  paritwine-arb.gp  paritwine-cmh.gp  paritwine-flint.gp  paritwine-mpc.gp  paritwine-mpfr.gp  paritwine.gp  paritwine.gp.in
src/: Makefile.am  Makefile.in  arb.c  cmh.c  conversions.c  mpc.c  mpfr.c  paritwine-config.h  paritwine-config.h.in  paritwine.h
tests/: Makefile.am  Makefile.in  tarb.c  tflint.c  tgmp.c  tmpc.c  tmpfr.c
